# mygit

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: commands.rs  lib.rs  utils.rs
crates/core/src/objects/: blob.rs  commit.rs  tree.rs
crates/core/src/repo/: branch.rs  config.rs  index.rs  mod.rs  repository.rs
crates/core/src/shared/types/: generic_object.rs  hash_result.rs  mod.rs  object_type.rs  ref_type.rs  tree_entry.rs
crates/core/tests/: integration_test.rs  utils_test.rs
crates/core/tests/common/: mod.rs
crates/desktop-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/desktop-app/src/: App.css  App.tsx  main.tsx
crates/desktop-app/src-tauri/: Cargo.toml
crates/desktop-app/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
crates/desktop-app/src/assets/icons/: index.ts
crates/desktop-app/src/assets/images/: index.ts
crates/desktop-app/src/components/Menu/: Menu.css  index.tsx
crates/desktop-app/src/config/: AppRoutes.tsx
crates/desktop-app/src/constants/: index.ts
crates/desktop-app/src/context/: RepositoryContext.tsx
crates/desktop-app/src/models/: Branch.ts  Commit.ts  Repository.ts  RepositoryAction.ts  RepositoryState.ts  Tree.ts  TreeEntry.ts
src/: cli.rs  commands.rs  lib.rs  main.rs  utils.rs
src/app/: app_state.rs  mod.rs  tui.rs
src/objects/: commit.rs  tree.rs
src/repo/: config.rs  index.rs  mod.rs  repository.rs
src/shared/types/: mod.rs  write_result.rs
tests/: integration_test.rs  utils_test.rs
(+2 files in other folders)
