[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
flate2 = "1.1.5"
hex = "0.4.3"
json = "0.12.4"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
toml = "0.9.8"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.24.0"
